# ITK-Wasm

./: .gitignore  build.js  index.html  itk_wasm_env.bash  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.cjs
.github/workflows/: cypress.yml  examples.yml  javascript-typescript.yml  playwright.yml  pr-checks.yml  python-wasm.yml  wasi.yml
cypress/: wasmTerminal.bundle.js  wasmTerminal.js  wasmTerminal.rollup.config.js
cypress/e2e/io/: dicom_series.cy.ts
examples/esm/: package.json
include/: itkJSONMeshIO.h
src/: CMakeLists.txt  build-wasi.js  exceptionShim.cxx  itk-wasm-cli.js  itkJSONMeshIO.cxx  wapm-module-descriptions.py
src/docker/itk-wasm-base/: Dockerfile
src/io/internal/: readMeshEmscriptenFSFile.ts
src/pipeline/internal/: runPipelineEmscripten.ts
src/python/itkwasm/itkwasm/: __init__.py  pipeline.py
src/python/itkwasm/test/: test_pipeline.py
src/python/itkwasm/test/input/: mesh-read-write-test.wasi.wasm
test/: run.sh
test/browser/: tests.js
test/browser/pipeline/: runPipelineBrowserTest.js
test/pipelines/MeshReadWritePipeline/: CMakeLists.txt  MeshReadWriteTest.cxx
